--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,18 @@ buildscript {
     }
 }
 
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
 apply plugin: 'com.android.application'
 
 android {
+    namespace 'com.wickboard'
     compileSdkVersion 33
-    buildToolsVersion "33.0.0"
 
     defaultConfig {
         applicationId "com.wickboard"
@@ -31,7 +38,7 @@ android {
     }
 }
 
-repositories {
-    google()
-    mavenCentral()
+dependencies {
+    // Basic dependency to ensure compilation works
+    implementation 'androidx.appcompat:appcompat:1.6.1'
 }
