--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ android {
         versionName "1.0"
     }
 
+    // ඔබේ Project එකේ Folder structure එකට ගැලපෙන ලෙස මෙය සැකසූවා
     sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
@@ -36,9 +37,4 @@ android {
             res.srcDirs = ['res']
         }
     }
-}
-
-dependencies {
-    // Basic dependency to ensure compilation works
-    implementation 'androidx.appcompat:appcompat:1.6.1'
 }
